# armv7-embedded-rust-app

./: Cargo.toml  README.adoc
.cargo/: config
src/: main.rs
