[package]
name = "app"
version = "0.1.0"
authors = ["Matthias  <wizzk42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-semihosting = "0.3.5"
rt = { path = "../rt" }
log = { path = "../log" }

[badges]
